// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageString Creates a usage string for a branch 1`] = `
"Usage: cli <subcommand> ...

This is a CLI

Subcommands:

echo"
`;

exports[`UsageString Creates a usage string for a command without a parent 1`] = `
"Usage: echo [<word>] [<options>] -- <str>

Positional arguments:

<word> : A word

Options:

[--message <str>] : A string message please
Special arguments:

<str> : Another word"
`;

exports[`UsageString Creates a usage string for a command without a parent branch 1`] = `
"Usage: cli echo [<word>] [<options>] -- <str>

Positional arguments:

<word> : A word

Options:

[--message <str>] : A string message please
Special arguments:

<str> : Another word"
`;

exports[`UsageString Does not write usage for named argGroups if there are none 1`] = `
"Usage: foo
"
`;
